fixed issue #18 - Misalignment of icons on project details page

--- a/src/templates/project-details.scss
+++ b/src/templates/project-details.scss
@@ -236,7 +236,7 @@ nav.project-details-nav {
     height: 75vh;
   }
   @media (min-width: 1367px) {
-    height: 52vh;
+    height: 56vh;
   }
 }
 
@@ -344,6 +344,12 @@ span.project-title {
 
 .badge-wrapper {
   @include media-breakpoint-up(md) {
+    margin-left: -.6rem !important;
+  }
+}
+
+.badge-wrapper-xxl {
+  @media (min-width: 1367px) {
     margin-left: -.6rem !important;
   }
 }
